# ompi

./: README
contrib/infrastructure/: verify-signed-off-config.php  verify-signed-off.php
ompi/: Makefile.am  libmpi.map
ompi/debuggers/: MPI_Handles_interface.txt  Makefile.am  mpihandles_interface.h  msgq_interface.h  ompi_common_dll.c  ompi_common_dll_defs.h  ompi_debugger_canary.c  ompi_debuggers.c  ompi_mpihandles_dll.c  ompi_mpihandles_dll_defs.h  ompi_msgq_dll.c
ompi/mca/cidalloc/: Makefile.am
ompi/mca/cidalloc/base/: Makefile.am  base.h  cidalloc_base_frame.c
ompi/mca/cidalloc/lowestcid/: Makefile.am  cidalloc_lowestcid.h  cidalloc_lowestcid_component.c  cidalloc_lowestcid_module.c  configure.m4  owner.txt
ompi/mpi/: Makefile.am
ompi/mpi/cxx/: Makefile.am
ompi/mpi/fortran/mpif-h/: Makefile.am
ompi/mpi/fortran/use-mpi-f08/: Makefile.am
ompi/mpi/fortran/use-mpi-ignore-tkr/: Makefile.am
opal/mca/btl/usnic/: Makefile.am  btl_usnic.h  btl_usnic_ack.c  btl_usnic_ack.h  btl_usnic_cclient.c  btl_usnic_compat.c  btl_usnic_compat.h  btl_usnic_component.c  btl_usnic_connectivity.h  btl_usnic_endpoint.c  btl_usnic_endpoint.h  btl_usnic_frag.c  btl_usnic_frag.h  btl_usnic_mca.c  btl_usnic_module.c  btl_usnic_module.h  btl_usnic_proc.c  btl_usnic_rdma.c  btl_usnic_rdma.h  btl_usnic_recv.c  btl_usnic_recv.h  btl_usnic_send.c  btl_usnic_send.h  btl_usnic_stats.c
opal/mca/pmix/pmix2x/: configure.m4
opal/mca/timer/linux/: help-opal-timer-linux.txt  timer_linux_component.c
orte/mca/ess/base/: help-ess-base.txt
orte/mca/ess/singleton/: ess_singleton_component.c
orte/mca/odls/: odls_types.h
orte/mca/rml/: rml_types.h
orte/mca/schizo/ompi/: schizo_ompi.c
orte/orted/: orted_comm.c  orted_submit.c  orted_submit.h
orte/tools/orterun/: help-orterun.txt
oshmem/: Makefile.am
oshmem/shmem/: Makefile.am
