# Copyright (c) 2013-2015 Mellanox Technologies, Inc.
#                         All rights reserved.
# Copyright (c) 2016 Cisco Systems, Inc.  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

headers += shmem/shmem_api_logger.h \
           shmem/shmem_lock.h

if PROJECT_OSHMEM
dist_oshmemdata_DATA += shmem/help-shmem-api.txt
endif
